# Prism_whisper2

./: .gitignore  2018 - dscg_ue1_2018_juridique.txt  IMPLEMENTATION_PLAN_V2.md  IMPLEMENTATION_TRACKER_V2.md  ORGANIZATION.md  PHASE2_COMPLETION_REPORT.md  PROJECT_CONSTRAINTS.md  README.md  README_DOCUMENTATION.md  SPRINT_KICKOFF.md  SuperWhisper2.bat  TRANSMISSION_COMPLETE.md  analyse_latence_optimisation.py  analyse_proposition_developpeur.py  analyse_webrtc_rode.py  benchmark_initialization.py  benchmark_latence_engine_v5.py  benchmark_optimization.py  clean_emojis.py  create_transmission_package.py  cuda_diagnostic_report.json  debug_microphones.py  debug_streaming_pipeline_e3.py  diagnostic_e3_results_20250609_005237.txt  diagnostic_e3_results_20250609_011115.txt  diagnostic_e3_results_20250609_011234.txt  diagnostic_engine_v5.py  diagnostic_engine_v5_architecture.py  dictee_simple.py  fix_cuda_dependencies.py  fix_engine_v5_callbacks_v2.py  fix_vad_bypass_engine_v5.py  interface_test_superwhisper.py  journal_developpement_engine_v5.md  journal_implementation_engine_v5_fix.md  plan_amelioration_validation.md  plan_implementation_detaille.py  plan_implementation_engine_v5_fix.md  prompt_consultation_developeur_c.md  prompt_succession_engine_v5.md  (+31 more)
%APPDATA%/Talon/user/: prism_bridge_poc.py
DEPRECATED/: test_correction_artefact.py  test_correction_artefact_simple.py  test_dictee_interactive.py  test_engine_v3.py  test_filtrage_immediat.py  test_microphone_interface.py  test_validation_micro.py
docs/: ACTION_PLAN.md  COMPARAISON_SOLUTIONS_COMMERCIALES.md  HANDOFF_PROMPT.md  IMPLEMENTATION_PROPOSAL.md  MANIFEST.md  PHASE1_COMPLETION_REPORT.md  PHASE2_SYSTEM_TRAY_README.md  PROJECT_CONSTRAINTS.md
docs/archive/: PEER_REVIEW_ANALYSIS.md  PEER_REVIEW_PROMPT.md  STARTER_KIT_README.md
docs/planning/: IMPLEMENTATION_PLAN_V2.md  IMPLEMENTATION_TRACKER_V2.md  PHASE3_TRACKING_RTX3090.md
docs/planning/phase4/: PHASE4_ENV.md  PHASE4_PROMETHEUS_TRACKER.md
docs/roadmap/: PARALLELISATION_ROADMAP.md
src/: __init__.py
src/audio/: __init__.py  audio_streamer.py  audio_streamer.py.backup_before_vad_bypass
src/bridge/: __init__.py  prism_bridge.py  prism_bridge_v2.py  prism_bridge_v4.py  prism_bridge_v5.py
src/core/: __init__.py  streaming_manager.py  whisper_engine.py  whisper_engine_v3.py  whisper_engine_v4.py  whisper_engine_v5.py
src/gpu/: __init__.py  memory_optimizer.py
src/proof_of_concepts/: talon_rpc_poc.py
src/talon_plugin/: prism_whisper2.py  prism_whisper2.talon
src/ui/: overlays.py  overlays_simple.py  system_tray.py
src/utils/: __init__.py  callback_guard.py
suivi/: COORDINATION_EQUIPE.md  PEER_REVIEW_TRACK_B_ANALYSIS.md  SESSION_1_RAPPORT_TRAVAUX.md  peer_review_track_b.md  suivi_progress_tracking.md
tests/: test_debug_engine.py  test_engine_simple.py  test_engine_v5_corrected.py  test_engine_v5_final.py  test_engine_v5_performance.py  test_engine_v5_rode_fix.py  test_engine_v5_simple.py  test_engine_v5_ultimate_20250608_190759.json  test_engine_v5_ultimate_20250608_190759.txt  test_engine_v5_ultimate_20250608_191357.json  test_engine_v5_ultimate_20250608_191357.txt  test_engine_v5_ultimate_20250608_192144.json  test_engine_v5_ultimate_20250608_192144.txt  test_engine_v5_ultimate_20250608_192736.json  test_engine_v5_ultimate_20250608_192736.txt  test_engine_v5_ultimate_20250608_193144.json  test_engine_v5_ultimate_20250608_193144.txt  test_engine_v5_ultimate_20250608_193620.json  test_engine_v5_ultimate_20250608_193620.txt  test_engine_v5_ultimate_20250608_195342.json  test_engine_v5_ultimate_20250608_195342.txt  test_superwhisper.py
transmission/: README_TRANSMISSION.md
transmission/briefings/: 20250607_1900_PHASE0_TO_PHASE1_SUCCESSEUR_BRIEFING.md  20250607_2100_PHASE1_TO_PHASE2_SUCCESSEUR_BRIEFING.md  20250607_2330_PHASE2_TO_PHASE3_SUCCESSEUR_BRIEFING.md
transmission/conventions/: BRIEFING_NAMING_CONVENTION.md
